*Empty MediaWiki Message*

--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -17,14 +17,29 @@
 {{ЭТ/|{{{регион|}}}|{{#if:{{{вид региона|}}}|[[{{#ifexist:{{{вид региона}}} ({{wikidata|P17|{{{мастор|}}}}})|{{{вид региона}}} ({{wikidata|p17|{{{мастор|}}}}}){{!}}{{ucfirst:{{{вид региона}}}}}|{{ucfirst:{{{вид региона}}}}}}}]]|Регион}}|3=[[{{#if:{{#if:{{{регион в таблице|}}}|{{{регион в таблице|}}}|{{{регион|}}}}}|{{#if:{{{регион в таблице|}}}|{{{регион в таблице|}}}|{{{регион|}}}}}}}]]<span class="adr" style="display:none"><span class="region">{{{регион}}}</span></span>|4={{{мастор|}}}}}
 {{ЭТ/|{{{район|}}}|{{#if:{{{вид района|}}}|[[{{#ifexist:{{{вид района}}} ({{wikidata|p17|{{{мастор|}}}}})|{{{вид района}}} ({{wikidata|p17|{{{мастор|}}}}}){{!}}{{ucfirst:{{{вид района}}}}}|{{ucfirst:{{{вид района}}}}}}}]]|[[Район]]}}|[[{{#if:{{#if:{{{район в таблице|}}}|{{{район в таблице|}}}|{{{район|}}}}}|{{#if:{{{район в таблице|}}}|{{{район в таблице|}}}|{{{район|}}}}}}}]]|{{{мастор|}}}}}
 {{ЭТ/|{{{община|}}}|{{#if:{{{вид общины|}}}|[[{{#ifexist:{{{вид общины}}} ({{wikidata|p17|{{{мастор|}}}}})|{{{вид общины}}} ({{wikidata|p17|{{{мастор|}}}}}){{!}}{{ucfirst:{{{вид общины}}}}}|{{ucfirst:{{{вид общины}}}}}}}]]|[[Община (административно-территориальная единица)|Община]]}}|[[{{#if:{{#if:{{{община в таблице|}}}|{{{община в таблице|}}}|{{{община|}}}}}|{{#if:{{{община в таблице|}}}|{{{община в таблице|}}}|{{{община|}}}}}}}]]|{{{мастор|}}}}}
-{{#ifexpr:{{#if:{{{lat_deg|}}}|0|1}} or {{#if:{{{lon_deg|}}}|0|1}}| {{#if:{{NAMESPACE}}{{{nocat|}}}||[[Категория:Википедия:Населённые пункты без указанных географических координат]]}}|{{ЭТ/|1=always-not-null|2=[[Географической координатт|Координатт]]|3={{coord|1={{{lat_deg|0}}}|2={{{lat_min|0}}}|3={{{lat_sec|0}}}|4={{#if:{{{lat_dir|}}}|{{{lat_dir}}}|N}}|5={{{lon_deg|0}}}|6={{{lon_min|0}}}|7={{{lon_sec|0}}}|8={{#if:{{{lon_dir|}}}|{{{lon_dir}}}|E}}|9={{{CoordAddon|}}}|scale={{#if:{{{CoordScale|}}}|{{{CoordScale}}}|100000}}|format=dms|display=title,inline|yandex=1|br=1}}|4={{{мастор|}}}}}}}
+{{#if:{{{lat_deg|}}}{{wikidata|p625|plain=true}}|{{НП/|1=always-not-null|2=[[Географиянь координатат|Координатат]]|3={{wikidata-coords|coord|12345678
+|lat_deg={{{lat_deg|}}}
+|lat_min={{{lat_min|}}}
+|lat_sec={{{lat_sec|}}}
+|lat_dir={{{lat_dir|}}}
+|lon_deg={{{lon_deg|}}}
+|lon_min={{{lon_min|}}}
+|lon_sec={{{lon_sec|}}}
+|lon_dir={{{lon_dir|}}}
+|9={{#if:{{{CoordAddon|}}}|{{{CoordAddon}}}|type:city}}
+|scale={{#if:{{{CoordScale|}}}|{{{CoordScale}}}|100000}}
+|format=dms
+|display=title,inline
+|yandex=1
+|br=1
+}}|4={{{мастор|}}}}}}}
 {{ЭТ/|{{{внутреннее деление|}}}|Внутреннее деление|{{{внутреннее деление}}}|{{{мастор|}}}}}
 {{ЭТ/|{{wikidata|p6|{{{глава|}}}}}|{{#if:{{{вид главы|}}}|{{ucfirst:{{{вид главы}}}}}|Прявт}}|{{wikidata|p6|{{{глава|}}}}}|{{{мастор|}}}}}
-{{ЭТ/|{{{дата основания|}}}|Путозь|[[{{{дата основания}}}]]|{{{мастор|}}}}}
-{{ЭТ/|{{{первое упоминание|}}}|Васенцедэ ледстямонзо|[[{{{первое упоминание}}}]]|{{{мастор|}}}}}
+{{ЭТ/|{{wikidata|p571|{{{дата основания|}}}|plain=true}}|Путозь|{{#if:{{{дата основания|}}}|[[{{{дата основания}}}]]|{{wikidata|p571}}}}|{{{мастор|}}}}}
+{{ЭТ/|{{wikidata|p1249|{{{первое упоминание|}}}|plain=true}}|Васенцеде ледстямонзо|{{#if:{{{первое упоминание|}}}|{{#ifexist: {{{первое упоминание}}}|[[{{{первое упоминание}}}]]|{{{первое упоминание}}}}}|{{wikidata|p1249}}}}|{{{страна|}}}}}
 {{ЭТ/|{{{прежние имена|}}}|Прежние названия|{{{прежние имена}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{статус с|}}}|{{#switch:{{ucfirst:{{{статус|{{{2|Населённый пункт}}}}}}}}|Посёлок городского типа=[[Посёлок городского типа|ПГТ]]&nbsp;с|Поселок городского типа=[[Посёлок городского типа|ПГТ]]&nbsp;с|{{ucfirst:{{{статус|{{{2|Эрямо тарка}}}}}}}}}}|[[{{{статус с}}}]]|{{{мастор|}}}|}}
-{{ЭТ/|{{{покшолмазо|}}}|[[Покшолмазо]]|{{{покшолмазо}}} [[Квадратной вайгельпе|вп²]]|{{{мастор|}}}}}
+{{ЭТ/|{{{wikidata|p2046[unit:q712226]|{{покшолмазо|}}}|[[Покшолмазо]]|{{wikidata|p2046[unit:q712226]|{{{покшолмазо}}} [[Квадратной вайгельпе|вп²]]|{{{мастор|}}}}}
 {{ЭТ/|{{{высота центра ЭТ|}}}|{{#if:{{{вид высоты|}}}|{{ucfirst:{{{вид высоты}}}}}|[[Иневедь лангосто сэресь|Куншкань сэресь]]}}|{{{высота центра ЭТ|}}} [[метр|м]]|{{{мастор|}}}}}
 {{ЭТ/|{{{климат|}}}|[[климат|Тип климата]]|{{{климат}}}|{{{мастор|}}}}}
 {{ЭТ/|1={{{официальный язык|}}}|2=Официальный язык|3={{#ifexist:{{{официальный язык}}} язык|[[{{{официальный язык}}} язык{{!}}{{{официальный язык}}}]]|[[{{{официальный язык}}}]]}}|4={{{мастор|}}}}}
