*Empty MediaWiki Message*

--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -43,7 +43,7 @@
 {{ЭТ/|{{{высота центра ЭТ|}}}|{{#if:{{{вид высоты|}}}|{{ucfirst:{{{вид высоты}}}}}|[[Иневедь лангосто сэресь|Куншкань сэресь]]}}|{{{высота центра ЭТ|}}} [[метр|м]]|{{{мастор|}}}}}
 {{ЭТ/|{{{климат|}}}|[[климат|Тип климата]]|{{{климат}}}|{{{мастор|}}}}}
 {{ЭТ/|1={{{официальный язык|}}}|2=Официальный язык|3={{#ifexist:{{{официальный язык}}} язык|[[{{{официальный язык}}} язык{{!}}{{{официальный язык}}}]]|[[{{{официальный язык}}}]]}}|4={{{мастор|}}}}}
-{{ЭТ/|1={{{эрицятне|}}}|2=Эрицятне|3={{nobr|1={{{эрицятне}}}&nbsp;{{#ifeq:{{#expr:{{{эрицятне}}}*0}}|0|{{plural:{{{эрицятне}}}|ломантне}}|ломантне}} {{#if:{{{год переписи|}}}|([[{{{год переписи}}} ие{{!}}{{{год переписи}}}]])}}}}|4={{{мастор|}}}}}
+{{ЭТ/|1={{wikidata|p1082|{{{Эрицятне|}}}|plain=true}}|2=Эрицятне|3={{#if:{{{Эрицятне|}}}|{{nobr|1={{{Эрицятне|}}}&nbsp;{{#ifeq:{{#expr:{{{Эрицятне}}}*0}}|0|{{plural:{{{Эрицятне}}}|ломантне}}|ломантне}} {{#if:{{{год переписи|}}}|([[{{{год переписи}}} ие{{!}}{{{год переписи}}}]])}}}}|{{wikidata/p1082}}}}|4={{{мастор|}}}}}
 {{ЭТ/|{{{плотность|}}}|Плотность|{{{плотность}}}&nbsp;лом./вп²|{{{мастор|}}}}}
 <!-- Стоит ли автоматически вычислить плотность? #if эрицятне AND площадь
 {{ЭТ/|{{{плотность|}}}|Плотность|{{#expr:{{{эрицятне}}}/{{{покшолмазо}}}}}&nbsp;лом./вп²|{{{мастор|}}}}}-->
@@ -51,10 +51,14 @@
 {{ЭТ/|{{{национальный состав|}}}|Национальный состав|{{{национальный состав}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{конфессиональный состав|}}}|Конфессиональный состав|{{{конфессиональный состав}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{этнохороним|}}}|[[Этнохороним]]|{{{этнохороним}}}|{{{мастор|}}}}}
-{{ЭТ/|{{{шкань каркс|}}}|[[Шкань каркс]]|[[UTC{{{шкань каркс}}}]]{{#if:{{{DST|}}}|, [[кизэнь шка|кизне]] [[UTC{{#ifexpr:{{{шкань каркс}}}+1>=0|+}}{{#expr:{{{шкань каркс}}}+1}}]]}}|{{{мастор|}}}}}
+{{ЭТ/|{{wikidata|p421|{{{шкань каркс|}}}|plain=true}}|[[шкань каркс]]|{{#if:{{{шкань каркс|}}}|[[UTC{{{шкань каркс}}}]]{{#if:{{{DST|}}}|, [[кизэнь шка|кизне]] [[UTC{{#ifexpr:{{{шкань каркс}}}+1>=0|+}}{{#expr:{{{шкань каркс}}}+1}}]]}}|{{wikidata/p421}}}}|{{{мастор|}}}}}
+
 {{ЭТ/|{{wikidata|p473|{{{Кортавксонь код|}}}}}|[[Телефонный план нумерации|Кортавксонь код]]|{{Кортавксонь код|{{wikidata|p473|{{{Кортавксонь код|}}}}}|{{{мастор|}}}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{почтовый индекс|}}}|[[Почтовый индекс]]|{{{почтовый индекс}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{почтовые индексы|}}}|[[Почтовый индекс|Почтовые индексы]]|{{{почтовые индексы}}}|{{{мастор|}}}}}
+{{#if:{{{почтовый индекс|}}}{{{почтовые индексы|}}}||<!--
+-->{{ЭТ/|{{wikidata|p281|plain=true}}|[[Почтовый индекс|Почтовые индексы]]|{{wikidata|p281}}|{{{мастор|}}}}}<!--
+-->}}
 {{ЭТ/|{{{автомобильный код|}}}|[[Автомобильные номера|Автомобильный код]]|{{{автомобильный код}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{цифровой идентификатор|}}}|[[{{ucfirst:{{{вид идентификатора}}}}}]]|{{{цифровой идентификатор}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{цифровой идентификатор 2|}}}|[[{{ucfirst:{{{вид идентификатора 2}}}}}]]|{{{цифровой идентификатор 2}}}|{{{мастор|}}}}}
