*Empty MediaWiki Message*

--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -39,7 +39,7 @@
 {{ЭТ/|{{wikidata|p1249|{{{первое упоминание|}}}|plain=true}}|Васенцеде ледстямонзо|{{#if:{{{первое упоминание|}}}|{{#ifexist: {{{первое упоминание}}}|[[{{{первое упоминание}}}]]|{{{первое упоминание}}}}}|{{wikidata|p1249}}}}|{{{страна|}}}}}
 {{ЭТ/|{{{прежние имена|}}}|Прежние названия|{{{прежние имена}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{статус с|}}}|{{#switch:{{ucfirst:{{{статус|{{{2|Населённый пункт}}}}}}}}|Посёлок городского типа=[[Посёлок городского типа|ПГТ]]&nbsp;с|Поселок городского типа=[[Посёлок городского типа|ПГТ]]&nbsp;с|{{ucfirst:{{{статус|{{{2|Эрямо тарка}}}}}}}}}}|[[{{{статус с}}}]]|{{{мастор|}}}|}}
-{{ЭТ/|{{{wikidata|p2046[unit:q712226]|{{покшолмазо|}}}|[[Покшолмазо]]|{{wikidata|p2046[unit:q712226]|{{{покшолмазо}}} [[Квадратной вайгельпе|вп²]]|{{{мастор|}}}}}
+{{ЭТ/|{{{wikidata|p2046[unit:q712226]|{{{покшолмазо|}}}}}|[[Покшолмазо]]|{{wikidata|p2046[unit:q712226]|{{{покшолмазо}}}}} [[Квадратной вайгельпе|вп²]]|{{{мастор|}}}}}
 {{ЭТ/|{{{высота центра ЭТ|}}}|{{#if:{{{вид высоты|}}}|{{ucfirst:{{{вид высоты}}}}}|[[Иневедь лангосто сэресь|Куншкань сэресь]]}}|{{{высота центра ЭТ|}}} [[метр|м]]|{{{мастор|}}}}}
 {{ЭТ/|{{{климат|}}}|[[климат|Тип климата]]|{{{климат}}}|{{{мастор|}}}}}
 {{ЭТ/|1={{{официальный язык|}}}|2=Официальный язык|3={{#ifexist:{{{официальный язык}}} язык|[[{{{официальный язык}}} язык{{!}}{{{официальный язык}}}]]|[[{{{официальный язык}}}]]}}|4={{{мастор|}}}}}
