*Empty MediaWiki Message*

--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -17,7 +17,7 @@
 {{ЭТ/|{{{регион|}}}|{{#if:{{{вид региона|}}}|[[{{#ifexist:{{{вид региона}}} ({{wikidata|P17|{{{мастор|}}}}})|{{{вид региона}}} ({{wikidata|p17|{{{мастор|}}}}}){{!}}{{ucfirst:{{{вид региона}}}}}|{{ucfirst:{{{вид региона}}}}}}}]]|Регион}}|3=[[{{#if:{{#if:{{{регион в таблице|}}}|{{{регион в таблице|}}}|{{{регион|}}}}}|{{#if:{{{регион в таблице|}}}|{{{регион в таблице|}}}|{{{регион|}}}}}}}]]<span class="adr" style="display:none"><span class="region">{{{регион}}}</span></span>|4={{{мастор|}}}}}
 {{ЭТ/|{{{район|}}}|{{#if:{{{вид района|}}}|[[{{#ifexist:{{{вид района}}} ({{wikidata|p17|{{{мастор|}}}}})|{{{вид района}}} ({{wikidata|p17|{{{мастор|}}}}}){{!}}{{ucfirst:{{{вид района}}}}}|{{ucfirst:{{{вид района}}}}}}}]]|[[Район]]}}|[[{{#if:{{#if:{{{район в таблице|}}}|{{{район в таблице|}}}|{{{район|}}}}}|{{#if:{{{район в таблице|}}}|{{{район в таблице|}}}|{{{район|}}}}}}}]]|{{{мастор|}}}}}
 {{ЭТ/|{{{община|}}}|{{#if:{{{вид общины|}}}|[[{{#ifexist:{{{вид общины}}} ({{wikidata|p17|{{{мастор|}}}}})|{{{вид общины}}} ({{wikidata|p17|{{{мастор|}}}}}){{!}}{{ucfirst:{{{вид общины}}}}}|{{ucfirst:{{{вид общины}}}}}}}]]|[[Община (административно-территориальная единица)|Община]]}}|[[{{#if:{{#if:{{{община в таблице|}}}|{{{община в таблице|}}}|{{{община|}}}}}|{{#if:{{{община в таблице|}}}|{{{община в таблице|}}}|{{{община|}}}}}}}]]|{{{мастор|}}}}}
-{{#if:{{{lat_deg|}}}{{wikidata|p625|plain=true}}|{{НП/|1=always-not-null|2=[[Географиянь координатат|Координатат]]|3={{wikidata-coords|coord|12345678
+{{#if:{{{lat_deg|}}}{{wikidata|p625|plain=true}}|{{ЭТ/|1=always-not-null|2=[[Географиянь координатат|Координатат]]|3={{wikidata-coords|coord|12345678
 |lat_deg={{{lat_deg|}}}
 |lat_min={{{lat_min|}}}
 |lat_sec={{{lat_sec|}}}
