*Empty MediaWiki Message*

--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -43,7 +43,7 @@
 {{ЭТ/|{{{высота центра ЭТ|}}}|{{#if:{{{вид высоты|}}}|{{ucfirst:{{{вид высоты}}}}}|[[Иневедь лангосто сэресь|Куншкань сэресь]]}}|{{{высота центра ЭТ|}}} [[метр|м]]|{{{мастор|}}}}}
 {{ЭТ/|{{{климат|}}}|[[климат|Тип климата]]|{{{климат}}}|{{{мастор|}}}}}
 {{ЭТ/|1={{{официальный язык|}}}|2=Официальный язык|3={{#ifexist:{{{официальный язык}}} язык|[[{{{официальный язык}}} язык{{!}}{{{официальный язык}}}]]|[[{{{официальный язык}}}]]}}|4={{{мастор|}}}}}
-{{ЭТ/|1={{wikidata|p1082|{{{Эрицятне|}}}|plain=true}}|2=Эрицятне|3={{#if:{{{Эрицятне|}}}|{{nobr|1={{{Эрицятне|}}}&nbsp;{{#ifeq:{{#expr:{{{Эрицятне}}}*0}}|0|{{plural:{{{Эрицятне}}}|ломантне}}|ломантне}} {{#if:{{{год переписи|}}}|([[{{{год переписи}}} ие{{!}}{{{год переписи}}}]])}}}}|{{wikidata/p1082}}}}|4={{{мастор|}}}}}
+{{ЭТ/|1={{wikidata|p1082|{{{эрицятне|}}}|plain=true}}|2=Эрицятне|3={{#if:{{{эрицятне|}}}|{{nobr|1={{{эрицятне|}}}&nbsp;{{#ifeq:{{#expr:{{{эрицятне}}}*0}}|0|{{plural:{{{эрицятне}}}|ломантне}}|ломантне}} {{#if:{{{год переписи|}}}|([[{{{год переписи}}} ие{{!}}{{{год переписи}}}]])}}}}|{{wikidata/p1082}}}}|4={{{мастор|}}}}}
 {{ЭТ/|{{{плотность|}}}|Плотность|{{{плотность}}}&nbsp;лом./вп²|{{{мастор|}}}}}
 <!-- Стоит ли автоматически вычислить плотность? #if эрицятне AND площадь
 {{ЭТ/|{{{плотность|}}}|Плотность|{{#expr:{{{эрицятне}}}/{{{покшолмазо}}}}}&nbsp;лом./вп²|{{{мастор|}}}}}-->
