--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -111,8 +111,8 @@
 |alt = {{#if:{{{карта района|}}}|{{{карта района}}}}}
 |markalt = {{{Эрзянь лем|{{{1}}}}}}
 }}
+{{!}}} }}}}}}}}
 -->
-
 {{#if:{{{lat_deg|}}}{{wikidata|p625|plain=true}}|{{#ifeq: {{{карта страны|}}}{{{карта региона|}}}{{{карта района|}}}| 000 || {{#ifexpr: {{REVISIONSIZE}} < 10240 | <div class="mw-customtoggle-maps1" style="background: {{цвет|{{wikidata|p17|{{{мастор|}}}|plain=true}}}}; padding: 1px 0; min-width: 332px; width: 100%; margin:0px 1px 1px 1px;">Показать/скрыть карты</div>
 <div class="mw-collapsible {{#if:{{{развернуть карты|}}}||mw-collapsed}}" id="mw-customcollapsible-maps1">
 <div class="mw-collapsible-content">}}}}{{wikidata-coords|ЭТ/ПозКарта
@@ -133,7 +133,7 @@
 |карта района = {{{карта района|}}}
 }}{{#ifeq: {{{карта страны|}}}{{{карта региона|}}}{{{карта района|}}}| 000 || {{#ifexpr: {{REVISIONSIZE}} < 10240 | </div></div> }}}}}}
 
-{{!}}} }}}}}}}}{{#if:{{wikidata|p373|{{{категория в Commons|}}}|plain=true}}|<div class="plainlinks metadata" style="border:solid #ddd;border-width:1px 0px 0px 0px;width:100%;background:#F0F0F0">{{#if:{{{категория в Commons|}}}|'''[{{localurl:commons:Category:{{{категория в Commons|}}}}}?uselang=myv {{{Эрзянь лем|{{{1}}}}}}]''' [[Википурнавкс]]со|{{wikidata/p373|text_before='''|text={{{Эрзянь лем|{{{1|}}}}}}|text_after=''' [[Википурнавкс]]со}}}}</div>}}
+{{#if:{{wikidata|p373|{{{категория в Commons|}}}|plain=true}}|<div class="plainlinks metadata" style="border:solid #ddd;border-width:1px 0px 0px 0px;width:100%;background:#F0F0F0">{{#if:{{{категория в Commons|}}}|'''[{{localurl:commons:Category:{{{категория в Commons|}}}}}?uselang=myv {{{Эрзянь лем|{{{1}}}}}}]''' [[Википурнавкс]]со|{{wikidata/p373|text_before='''|text={{{Эрзянь лем|{{{1|}}}}}}|text_after=''' [[Википурнавкс]]со}}}}</div>}}
 |}{{#if:{{NAMESPACE}}{{{nocat|}}}||<!--<!--
 -->[[Категория:Велетне-сядтнэ ловнома тешкскерьксэнть коряс]]<!--
 -->{{#if:{{{дата основания|}}}|{{#iferror:[[Категория:Населённые пункты, основанные в {{#expr:{{ссылку в число|{{{дата основания}}}}}}} году]]}}}}<!--
