--- a/ЛопаПарцун:ЭТ.mw
+++ b/ЛопаПарцун:ЭТ.mw
@@ -51,7 +51,7 @@
 {{ЭТ/|{{{национальный состав|}}}|Национальный состав|{{{национальный состав}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{конфессиональный состав|}}}|Конфессиональный состав|{{{конфессиональный состав}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{этнохороним|}}}|[[Этнохороним]]|{{{этнохороним}}}|{{{мастор|}}}}}
-{{ЭТ/|{{wikidata|p421|{{{шкань каркс|}}}|plain=true}}|[[шкань каркс]]|{{#if:{{{шкань каркс|}}}|[[UTC{{{шкань каркс}}}]]{{#if:{{{DST|}}}|, [[кизэнь шка|кизне]] [[UTC{{#ifexpr:{{{шкань каркс}}}+1>=0|+}}{{#expr:{{{шкань каркс}}}+1}}]]}}|{{wikidata/p421}}}}|{{{мастор|}}}}}
+{{ЭТ/|{{wikidata|p421|{{{шкань каркс|}}}|plain=true}}|[[Шкань каркс]]|{{#if:{{{шкань каркс|}}}|[[UTC{{{шкань каркс}}}]]{{#if:{{{DST|}}}|, [[кизэнь шка|кизне]] [[UTC{{#ifexpr:{{{шкань каркс}}}+1>=0|+}}{{#expr:{{{шкань каркс}}}+1}}]]}}|{{wikidata/p421}}}}|{{{мастор|}}}}}
 
 {{ЭТ/|{{wikidata|p473|{{{Кортавксонь код|}}}}}|[[Телефонный план нумерации|Кортавксонь код]]|{{Кортавксонь код|{{wikidata|p473|{{{Кортавксонь код|}}}}}|{{{мастор|}}}}}|{{{мастор|}}}}}
 {{ЭТ/|{{{почтовый индекс|}}}|[[Почтовый индекс]]|{{{почтовый индекс}}}|{{{мастор|}}}}}
