*Empty MediaWiki Message*

--- a/ЛопаПарцун:Цвет.mw
+++ b/ЛопаПарцун:Цвет.mw
@@ -28,6 +28,7 @@
 |Польша Мастор= <nowiki>#</nowiki>ffcbdb
 |Приднестровская Молдавская Республика = <nowiki>#</nowiki>f7d900
 |Россия = <nowiki>#</nowiki>a3eea3
+|Россия Мастор= <nowiki>#</nowiki>a3eea3
 |Румыния Мастор= <nowiki>#</nowiki>ffd060
 |Сан-Томе ды Принсипи Мастор = <nowiki>#</nowiki>66ff88
 |СССР = <nowiki>#</nowiki>ffaeb9
