*Empty MediaWiki Message*

--- a/Михайловка_(Тумобуе).mw
+++ b/Михайловка_(Тумобуе).mw
@@ -1,11 +1,11 @@
 {{Лия смустьтне|Михайловка (смустьтне)}}
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              =Михайловка
+ |Эрзянь лем              = Михайловка
  |оригинальное название   = 
  |изображение             = 
  |подчинение              = 
- |мастор                  = Россия
+ |мастор                  = Россия Мастор
  |герб                    = 
  |коцт                    = 
  |описание герба          = 
