*Empty MediaWiki Message*

--- a/Кулязбуе_(Отяжбуе).mw
+++ b/Кулязбуе_(Отяжбуе).mw
@@ -54,7 +54,7 @@
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = ОКАТО
- |цифровой идентификатор  = {ОКАТО|89207551000}
+ |цифровой идентификатор  = {{ОКАТО|89207551000}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
