--- a/Мокшонь_Баймак_(Оразайбуе).mw
+++ b/Мокшонь_Баймак_(Оразайбуе).mw
@@ -22,7 +22,7 @@
  |регион                  = Мордовия Республикась
  |регион в таблице        = 
  |вид района              = Буе
- |район                   = Рузайбуе
+ |район                   = Оразайбуе
  |район в таблице         = 
  |вид общины              = 
  |община                  = 
@@ -39,8 +39,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 9 <ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
   |национальный состав    = [[мокшот]]
