*Empty MediaWiki Message*

--- a/Покш_Толкан_веле_(Похвистнева_буень).mw
+++ b/Покш_Толкан_веле_(Похвистнева_буень).mw
@@ -31,7 +31,7 @@
  |внутреннее деление      = 
  |вид главы               = велень прявт
  |глава                   =
- |дата основания          =  1650
+ |дата основания          =  1650 ие
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 
