--- a/Покровское_(Отяжбуе).mw
+++ b/Покровское_(Отяжбуе).mw
@@ -60,6 +60,9 @@
 }}
 '''Покровское''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
+== Сёрм. ==
+<references />
+
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
