*Empty MediaWiki Message*

--- a/Мордовия_Республикась.mw
+++ b/Мордовия_Республикась.mw
@@ -27,7 +27,8 @@ OfLangs=[[Рузонь кель|рузонь]], [[Эрзянь кель|эрзя
 HeadNm= Владимир Волков|
 MSKS=0|
 }}
-'''Мордо́вия Респу́бликась (Э́рзянь ды Мо́кшонь Ма́сторось)''' — республика, [[Россия Мастор|Россия Масторонть]] вейкеть права марто субъект. Прявтошось — [[Саран ош]].
+'''Мордо́вия Респу́бликась''' ({{lang-mdf|Мордовиясь}}, {{lang-myv|Мордовиясь}})<ref>Оба названия являются официальными и равнозначными согласно Конституции Республики Мордовии, ст. 1, п. 2 {{Ref-ru}}</ref> — республика, [[Россия Мастор|Россия Масторонть]] вейкеть права марто субъект. Прявтошось — [[Саран ош]].
+
 
 == Географической аштема тарказо ==
 Республикась ашти [[Чилисема-Европейской валаня тарка|Чилисема-Европейскоень валаня тарканть]] лангсо чилисема ёнксонть, чивалгома ёнксось ашти [[Йока]]-Дононь валаня таркаванть, тараказо — 26,2 тёжат [[Вайгельпе|вайгельпеть]]. Республиканть сехте вере тарказо — 324 м. 
@@ -37,11 +38,11 @@ MSKS=0|
 Мордовиява чудить 114 [[лей]]ть. Сехте покштне: [[Мокша лей|Мокша леесь]], [[Исса лей|Исса]], [[Севонь лей|Сивинь]], Сатис, [[Вадолей|Вад]] чудильманзо марто ды [[Сура лей|Сурась]] – [[Ратор лей|Ратор (Алатырь)]], [[Инесаро лей|Инсар]] ды Рудня чудильманзо марто. Истяжо Мордовиясо малав 500 [[эрьке]]ть. Сехте покштне: [[Инерка]] ды Татарка.
 
 == Икелень эрямо кевкстемась ==
-1928 [[Ие|иень]] [[Медьков|Медьковонь]] кемкотово чистэ, Куншка-Равонь ёнкстнень потмсо, теезь Эрзямокшонь округось (кужось). Эрзянь Мокшонь Масторось (Мордовиясь) чачсь 1930 иень [[Якшамков|якшамковонь]] 10 чистэ кода явозь ёнкс, мейле сон теевсь Эсь Азорксчи марто (Автономной) Масторокс. 1934 иень [[Ацамков|ацамковонь]] комсеце чистэ лемдязь — Мордовской Автономной Советской Социалистической Республикакс. 1990 иень ацамковонь сисемеце чистэ сон теезь — Мордовской Советской Социалистической Республикакс. 1994 иень якшамковонь комсьветееце чистэ неень шкас — Мордовия Республикась. Эрзянь ды Мокшонь Масторонь Конституциясь примазь 1995 иень [[Таштамков|таштамковонь]] комсьвейкееце чистэ Мордовия Республикань Конституциянь Промкссонть.
+[[1928 ие]]нь [[медьковонь 26 чи|кемкотово чи]]стэ, Куншка-Равонь ёнкстнень потмсо, теезь Эрзямокшонь округось (кужось). Эрзянь Мокшонь Масторось (Мордовиясь) чачсь [[1930 ие]]нь [[якшамковонь 10 чи]]стэ кода явозь ёнкс, мейле сон теевсь Эсь Азорксчи марто (Автономной) Масторокс. [[1934 ие]]нь [[ацамковонь 20 чи|ацамковонь комсеце чи]]стэ лемдязь — Мордовской Автономной Советской Социалистической Республикакс. [[1990 ие]]нь [[ацамковонь 7 чи|ацамковонь сисемце чи]]стэ сон теезь — Мордовской Советской Социалистической Республикакс. [[1994 ие]]нь [[якшамковонь 25 чи|комсьветееце чи]]стэ неень шкас — Мордовия Республикась. Эрзянь ды Мокшонь Масторонь Конституциясь примазь [[1995 ие]]нь [[таштамковонь 21 чи|таштамковонь комсьвейкеце чи]]стэ Мордовия Республикань Конституциянь Промкссонть.
 
 == Эрицятнеде ==
 [[Артовкс:Народы Мордовии.png|thumb|400px|left|Раськетьне конат эрить Мордовияссо]]
-Мордовиясо неень шкасто эрить 808 888 ломанть (2015 ие). Мордовия Республикасо совить комськавтово велень буеть, вейке ошонь кужот ды кото буень кедь алов совиця ошт. Весемекс: 19 важодиця эрямот, ды 1 313 велеть. Ошонь эрицят — 61,22 % (2015 ие).
+Мордовиясо неень шкасто эрить 808 888 лом. (2015 ие), 807 453<ref name="Оценка численности">[http://www.gks.ru/free_doc/new_site/population/demo/Popul2016.xls Оценка численности постоянного населения на 1 января 2016 года и в среднем за 2015 год. ] {{Ref-ru}}</ref> лом. (2016 ие). Мордовия Республикасо совить комськавтово велень буеть, вейке ошонь кужот ды кото буень кедь алов совиця ошт. Весемекс: 19 важодиця эрямот, ды 1 313 велеть. Ошонь эрицят — 61,22 % (2015 ие).
 
 Мордовиясо эрить [[эрзят]] (чилисема ёнкссо) ды [[мокшот]] (куншка таркасо ды чивалгома ёнкссо). 
 
@@ -93,6 +94,9 @@ MSKS=0|
 # [[Теньгушбуе]]
 # [[Торбейбуе]]
 # [[Чаунзабуе]]
+
+== Лисьм.: ==
+<references />
 
 {{Commonscat|Mordovia|Мордовия Республикась}}
 
