--- a/Мордовия_Республикась.mw
+++ b/Мордовия_Республикась.mw
@@ -58,9 +58,15 @@ MSKS=0|
 Васенцеде, наукань тевсэ эрзянь келень юронть ванькставтызе руз валтнэнь эйстэ '''эрзянь васенце профессор''' [[Рябовонь Анатолий|Рябовонь Анатолий Павлович]] .
 
 == Эрьва мезде ==
-Неень шкасто Мордовия ловови аграрно-индустриальной регионокс, течинь чис саезь сон ашти вейке рядсо виев ды покш Россиянь предприятиятнень ютксо. Мордовиясо нолдавить электроника, экскаваторт, резинотехнической изделият, медицинань препарат, валдонь приборт, вагонт ды пельвагонт. Покш вирень площадьтне аштить юрокс чувтонь перерабатывающей промышленностьсэнть. Республиканть велень хозяйствасо кастовить модамарть, сахор якстерькайть ды лия эмежт. Покш тарка истя жо саи кудонь ракшань кастомась ды сывелень миемась.
+Неень шкасто Мордовия ловови аграрно-индустриальной регионокс, течинь чис саезь сон ашти вейке рядсо виев ды покш Россиянь предприятиятнень ютксо. Мордовиясо нолдавить электроника, экскаваторт, резинотехнической изделият, медицинань препарат, валдонь приборт, вагонт ды пельвагонт. Покш вирень площадьтне аштить юрокс чувтонь перерабатывающей промышленностьсэнть. Республиканть велень хозяйствасо кастовить [[Модамарь|модамарть]], сахор якстерькайть ды лия эмежт. Покш тарка истя жо саи кудонь ракшань кастомась ды сывелень миемась.
 
-Республикасо улить пек мазы таркат, тесэ вастат тусто вирть, вирень степть, чеядавкст ды чуварт, лейть ды эрькть, поронь пандопрят ды раужо мода. Тесэ касыть тёжадо ламо куракшонь ды цецянь видт, эрить кавтосядто ламо нармунть ды малав котонькемень ракшат. Эсензэ мазычисэнзэ республикась мани иестэ иес седе ламо оймсицят. Мордовиясь ламо иеть содави эсензэ спортсменсэнзэ истямо видсэ, кода якамосо, стака атлетикасо, греко-римской бороцямосо, пауэрлифтингсэ ды спидвейсэ. 2004 иестэ васенцекс республикасо Михаил Мишин сайсь сиянь медаль Афинэнь Олимпиадасо. Неень чистэ республикасо 500 ламо эйкакшт бажить саемс соревнованиясо призовой таркат спортивной якамосо, ды эряви меремс, ули кинь кис кенярдомс. Денис Нижегородов ды Алексей Воеводин 2004 иестэ теевсть сиянь ды бронзовой призерокс Олимпиадасо Афинасо. Республикась ловови ламораськенекс, тесэ эрить эрзят, мокшот, [[шокшот|шокшат]], [[рузт]], [[печкаст]] ды лиять, весе сынь эрить паро мельсэ ды оймсэ. Мордоявиясо ламо тонавтнемань, культурань ды оймсемань учрежденият.
+Республикасо улить пек мазы таркат, тесэ ваставить тусто [[вирь|вирть]], вирень степть, чеядавкст ды чуварт, [[лей]]ть ды [[Эрьке|эрькть]], поронь пандопрят ды раужо [[мода]]. Тесэ касыть [[тёжа]]до ламо куракшонь ды цецянь видт, эрить [[кавтосядт]]о ламо [[нармунть]] ды малав [[кодгемень|котонькемень]] [[ракшат]]. Эсензэ мазычисэнзэ республикась мани иестэ иес седе ламо оймсицят. 
+
+Республикась ловови ламораськенекс, тесэ эрить эрзят, мокшот, [[шокшот|шокшат]], [[рузт]], [[печкаст]] ды лиять, весе сынь эрить паро мельсэ ды оймсэ. Мордоявиясо ламо тонавтнемань, шкинемань ды оймсемань учрежденият.
+
+
+== Налксемат ==
+Мордовиясь ламо иеть содави эсензэ налксицясо-спортменсэнзэ истямо видсэ, кода [[спортонь якамо|якамосо]], стака атлетикасо, греко-римской бороцямосо, пауэрлифтингсэ ды спидвейсэ. [[2004 ие]]стэ васенцекс республикасо Михаил Мишин<ref name="«Советская Сибирь»">[http://www.sovsibir.ru/news/83955 «Советская Сибирь». ВЗЯВ «СЕРЕБРО» В ОБЩЕКОМАНДНОМ, МЫ УСТУПИЛИ ЛИШЬ МОСКВЕ] {{ref-ru}}</ref> сайсь сиянь медаль Афинэнь Олимпиадасо. Неень чистэ республикасо 500 ламо эйкакшт бажить саемс соревнованиясо призовой таркат спортивной якамосо, ды эряви меремс, ули кинь кис кенярдомс. Денис Нижегородов<ref name="Runners.ru">[http://runners.ru/post/5285 Runners.ru. Денис Нижегородов: дело в так называемой «гусиной лапке»] {{ref-ru}}</ref> ды Алексей Воеводин<ref name="«Столица С»">[https://stolica-s.su/sport/athletics/15117 «Редакция еженедельной газеты «Столица С». «Я был не меньшим героем, чем Денис Нижегородов»] {{ref-ru}}</ref> 2004 иестэ теевсть сиянь ды бронзовой призерокс Олимпиадасо Афинасо. Спортонь якамоcо содавиксэвть [[Каниськина, Ольга Николаевна|Ольга Каниськина]]<ref name="ТАСС">[http://www.eurosport.ru/athletics/story_sto5663172.shtml  ТАСС. Олимпийская чемпионка по спортивной ходьбе Ольга Каниськина завершила карьеру] {{ref-ru}}</ref> ды [[Валерий Борчин|Валерий Борчин]]<ref name="«Спортбокс»">[http://news.sportbox.ru/olympics/spbnews_NI44882_Pekin_2008_Dla_Borchina_zolotaja_medal_stala_surprizom  «Спортбокс». Пекин-2008: Для Борчина золотая медаль стала сюрпризом] {{ref-ru}}</ref>, конат [[2008 ие]]нь Пекинэнь Олимпиаданть Чемпионтт.
 
 == Мордовиянь тонавтнемань таркат==
 * Республикасо тонавтнемань 9 версе заведеният (вере тонавтнема тарка). Сынст прявтсо Мордовиянь Н. П. Огарёв лемсэ государственной университетэсь. Панжозь [[1931]]-це иень [[ожоков]]онь 1-це чистэ кода педагогической институт. [[1957]]-це иень [[ожоков]]онь 2-це чистэ саезь университет. Ней эйсэнзэ [[14]] факультетт ды [[7]] институтт, конатнесэ тонавтнить [[35]] тёжадо ламо студентт. Равчирень классической вузтнэстэ сехте покш, сови национальной исследовательской университеттнэнь юткс. 
