/* Мордовиянь тонавтнемань таркат */

--- a/Мордовия_Республикась.mw
+++ b/Мордовия_Республикась.mw
@@ -69,11 +69,11 @@ MSKS=0|
 Мордовиясь ламо иеть содави эсензэ налксицясо-спортменсэнзэ истямо видсэ, кода [[спортонь якамо|якамосо]], стака атлетикасо, греко-римской бороцямосо, пауэрлифтингсэ ды спидвейсэ. [[2004 ие]]стэ васенцекс республикасо Михаил Мишин<ref name="«Советская Сибирь»">[http://www.sovsibir.ru/news/83955 «Советская Сибирь». ВЗЯВ «СЕРЕБРО» В ОБЩЕКОМАНДНОМ, МЫ УСТУПИЛИ ЛИШЬ МОСКВЕ] {{ref-ru}}</ref> сайсь сиянь медаль Афинэнь Олимпиадасо. Неень чистэ республикасо 500 ламо эйкакшт бажить саемс соревнованиясо призовой таркат спортивной якамосо, ды эряви меремс, ули кинь кис кенярдомс. Денис Нижегородов<ref name="Runners.ru">[http://runners.ru/post/5285 Runners.ru. Денис Нижегородов: дело в так называемой «гусиной лапке»] {{ref-ru}}</ref> ды Алексей Воеводин<ref name="«Столица С»">[https://stolica-s.su/sport/athletics/15117 «Редакция еженедельной газеты «Столица С». «Я был не меньшим героем, чем Денис Нижегородов»] {{ref-ru}}</ref> 2004 иестэ теевсть сиянь ды бронзовой призерокс Олимпиадасо Афинасо. Спортонь якамоcо содавиксэвть [[Каниськина, Ольга Николаевна|Ольга Каниськина]]<ref name="ТАСС">[http://www.eurosport.ru/athletics/story_sto5663172.shtml  ТАСС. Олимпийская чемпионка по спортивной ходьбе Ольга Каниськина завершила карьеру] {{ref-ru}}</ref> ды [[Валерий Борчин|Валерий Борчин]]<ref name="«Спортбокс»">[http://news.sportbox.ru/olympics/spbnews_NI44882_Pekin_2008_Dla_Borchina_zolotaja_medal_stala_surprizom  «Спортбокс». Пекин-2008: Для Борчина золотая медаль стала сюрпризом] {{ref-ru}}</ref>, конат [[2008 ие]]нь Пекинэнь Олимпиаданть Чемпионтт.
 
 == Мордовиянь тонавтнемань таркат==
-* Республикасо тонавтнемань 9 версе заведеният (вере тонавтнема тарка). Сынст прявтсо Мордовиянь Н. П. Огарёв лемсэ государственной университетэсь. Панжозь [[1931]]-це иень [[ожоков]]онь 1-це чистэ кода педагогической институт. [[1957]]-це иень [[ожоков]]онь 2-це чистэ саезь университет. Ней эйсэнзэ [[14]] факультетт ды [[7]] институтт, конатнесэ тонавтнить [[35]] тёжадо ламо студентт. Равчирень классической вузтнэстэ сехте покш, сови национальной исследовательской университеттнэнь юткс. 
+* Республикасо тонавтнемань 9 версе заведеният (вере тонавтнема тарка). Сынст прявтсо Мордовиянь Н. П. Огарёв лемсэ государственной университетэсь. Панжозь [[1931]]-це иень [[ожоковонь 1 чи]]стэ кода педагогической институт. [[1957]]-це иень [[ожоковонь 2 чи]]стэ саезь университет. Ней эйсэнзэ [[14]] факультетт ды [[7]] институтт, конатнесэ тонавтнить [[35]] тёжадо ламо студентт. Равчирень классической вузтнэстэ сехте покш, сови национальной исследовательской университеттнэнь юткс. 
 
-* Мордовиянь М. Е. Евсевьев лемсэ государственной педагогической институтось теезь [[1962]]-це иень [[медьков]]онь [[30]]-це [[чи]]стэ. Ней эйсэнзэ 7 факультетт, конатнесэ тонавтнить малав [[6]] тёжат студентт. [[2004]]-це иестэ Рособразованиянь рейтингсэ масторонь [[78]] педагогической вузтнэнь ютксо саизе [[36]]-це тарканть. 
+* Мордовиянь М. Е. Евсевьев лемсэ государственной педагогической институтось теезь [[1962]]-це иень [[медьковонь 30 чи]]стэ. Ней эйсэнзэ 7 факультетт, конатнесэ тонавтнить малав [[6]] тёжат студентт. [[2004]]-це иестэ Рособразованиянь рейтингсэ масторонь [[78]] педагогической вузтнэнь ютксо саизе [[36]]-це тарканть. 
 
-* Россиянь кооперациянь университетэнь Саранскоень кооперативной институтось теезь [[1976]]-це иень [[таштамков]]онь [[23]]-це чистэ. Эйсэнзэ тонавтнить малав 7 [[тёжа]]т студентт. Тонавтнемась ветяви истямо лувсо: лицей – техникум – вуз. Кооперативной техникумось аноксты специалистт [[5]] специальностень коряс, высшей образования максови 4 специальностень коряс.
+* Россиянь кооперациянь университетэнь Саранскоень кооперативной институтось теезь [[1976]]-це иень [[таштамковонь 23 чи]]стэ. Эйсэнзэ тонавтнить малав 7 [[тёжа]]т студентт. Тонавтнемась ветяви истямо лувсо: лицей – техникум – вуз. Кооперативной техникумось аноксты специалистт [[5]] специальностень коряс, высшей образования максови 4 специальностень коряс.
 
 == Мордовиянь буетне ==
 Ней Мордовиясо 22 буеть ды республикань кедь ало 3 [[ош]]т ([[Саранск]], [[Рузаевка]], [[Ковёл ош]]). 
