*Empty MediaWiki Message*

--- a/Мордовия_Республикась.mw
+++ b/Мордовия_Республикась.mw
@@ -114,3 +114,4 @@ MSKS=0|
 {{Россия Масторонть масторпелькстнэ}}
 
 [[Категория:Россия Масторонть масторпелькстнэ]]
+[[Категория:Википедиясь:Кочказь лопат]]
