--- a/Мокшонь_Куженя_(Оразайбуе).mw
+++ b/Мокшонь_Куженя_(Оразайбуе).mw
@@ -49,7 +49,7 @@
  |шкань каркс             = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 431482
  |почтовые индексы        = 
  |автомобильный код       = 
  |вид идентификатора      = 
