валонь-арсемань молема лув

--- a/Математика.mw
+++ b/Математика.mw
@@ -1,4 +1,4 @@
-'''Математикась''' — те наукась ламоксчинь, ды сонзэ сюлмавксонть миренть-масторонть марто. 
+'''Математикась''' — те ламоксчинь, ды сонзэ сюлмавксонзо миренть-масторонть марто наукась.
 
 == Математикань лувонь тематне ==
 
