Correct coat of arms, this is the current and not one of at least 70 years ago.

--- a/Амстердам_ош.mw
+++ b/Амстердам_ош.mw
@@ -6,7 +6,7 @@
  |изображение             = Zicht op Amsterdam1.jpg
  |подчинение              = прявтош
  |мастор                  = Нидерланды
- |герб                    = Wapen van Amsterdam (Ströhl).svg
+ |герб                    = Wapen van Amsterdam.svg
  |коцт                    = Flag of Amsterdam.svg
  |описание герба          = 
  |описание флага          = 
