--- a/Цыганкин,_Дмитрий_Васильевич.mw
+++ b/Цыганкин,_Дмитрий_Васильевич.mw
@@ -27,7 +27,7 @@
 
 
 == Эрямо пингезэ ==
-Чачсь Д.В. Цыганкин [[1925 ие|1925 иень]] ожоковонь 22 чистэ Саранонь уездэнь Пензань губерниянь Мокшалеень волостень Мокшалей велесэ (ней – [[Мордовия Республикась|Мордовия Республикань]] [[Чаунзабуе]]. 1940 иестэ прядынзе Мокшалеень аволь пешксе школань сисем класснэнь ды тусь тонавтнеме Покш Маризьвелень средней школас.
+Чачсь Д.В. Цыганкин [[1925 ие|1925 иень]] ожоковонь 22 чистэ Саранонь уездэнь Пензань губерниянь Мокшалеень волостень Мокшалей велесэ (ней – [[Мордовия Республикась|Мордовия Республикань]] [[Чаунзабуе]]). 1940 иестэ прядынзе Мокшалеень аволь пешксе школань сисем класснэнь ды тусь тонавтнеме Покш Маризьвелень средней школас.
 
 1943 иень [[эйзюрков]]сто Д.В. Цыганкин эсь мелензэ коряс туи фронтов ды тееви вишка командиртнэнь артиллериянь инструментальной разведкань курсантокс (Ногинск ош, Бронницы ош).
 
@@ -39,8 +39,7 @@
 
 Мордовиянь пединститутонь прядомадо мейле Д.В. Цыганкиннэнь максозь «Рузонь келень ды литературань, эрзянь келень ды литературань тонавтыця».
 
-1972 иестэ саезь ды неень шкас Д.В. Цыганкин ловны «История эрзянского языка», «Диалектология эрзянского языка» лекционной курсат,  «Ономастика», «Сравнительная морфология финно-угорских языков» спецкурсат НИ МГУ Н.П. Огарева лемсэ филологиянь факультетсэ, вети студентэнь дипломонь ды курсовой важодемат<ref name="ИМ_Жизнь посвятил родному языку">[http://izvmor.ru/article_10114.html Известия Мордовии. Жизнь посвятил родному языку] {{ref-ru}}</ref>. 
-
+1972 иестэ саезь ды неень шкас Д.В. Цыганкин ловны «История эрзянского языка», «Диалектология эрзянского языка» лекционной курсат,  «Ономастика», «Сравнительная морфология финно-угорских языков» спецкурсат НИ МГУ Н.П. Огарева лемсэ филологиянь факультетсэ, вети студентэнь дипломонь ды курсовой важодемат<ref name="ИМ_Жизнь посвятил родному языку">[http://izvmor.ru/article_10114.html Известия Мордовии. Жизнь посвятил родному языку] {{ref-ru}}</ref>.
 
 ==Шкинемазо==
 ===Научнойть ды тонавтнемань-методической важодемат===
