*Empty MediaWiki Message*

--- a/Амстердам_ош.mw
+++ b/Амстердам_ош.mw
@@ -28,8 +28,8 @@
  |община                  = 
  |община в таблице        = 
  |внутреннее деление      = 
- |вид главы               = Бургомистр
- |глава                   = Эберхард ван дер Лан
+ |вид главы               = 
+ |глава                   = 
  |дата основания          = 
  |первое упоминание       = 1275 ие
  |прежние имена           = 
@@ -39,8 +39,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 813 957
-  |год переписи           = 2014
+  |эрицятне               = 
+  |год переписи           = 
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
