Removing "Torama2.jpg", it has been deleted from Commons by [[commons:User:INeverCry|INeverCry]] because: Copyright violation, see [[:c:Commons:Licensing|]].

--- a/«Торама»_морамо-седямо_кужо.mw
+++ b/«Торама»_морамо-седямо_кужо.mw
@@ -4,7 +4,7 @@
  |Ключ               = 
  |Лого               = 
  |Ширина_лого        = 
- |Фото               = Torama2.jpg
+ |Фото               =
  |Описание_фото      = «Торама» 1992 иестэ
  |Ширина_фото        = 200px
  |Фон                = 
@@ -20,7 +20,7 @@
  |Бывшие участники   = 
  |Сайт               = [http://torama.club/ Torama.club] <!-- {{URL|example.com}} -->
 }}
-<!-- [[Image:Torama2.jpg|thumb|right|200px|«Торама» 1992 иестэ]] -->
+<!---->
 '''«Торама»''' ({{lang-myv|Йо́влат}}<ref name="Эрзянь Мастор">[http://www.erzia.saransk.ru/arhiv.php?n=3713&nom11=360 «Эрзянь Мастор» // Звезда упала — свет её остался. Жизненный и творческий путь Йовлань Оло]{{ref-ru}}, {{ref-myv}}</ref><ref name="Kultuur.ee">[http://kultuur.err.ee/v/muusika/e3e30e33-e6ae-4652-a734-d2f23d26fd45 Kultuur.ee // Etnolaager Kõpu mõisas tõi kokku üle 70 muusiku]{{ref-et}}</ref>, латиницасо сёрмадыть '''Toorama<ref name="Folkcenter">[http://folkcenter.ru/группа/Торама Folkcenter // Торама]{{ref-ru}}</ref>''') — цёрань сёдямо-морамо кужо.   
 
 Мордовиянь Республиканть Масторпрявт Казямо [[1995 ие]]нь лауреат<ref name="Министерство культуры и туризма РМ"/>. Пурназь [[1990 ие]]сте<ref name="Бояркина Л.">Бояркина Л.Б. Мордовская музыкальная энциклопедия / под общ.ред.Н.И.Бояркина. – Саранск: Мордов.кн.изд-во, 2011. - С.331.{{ref-ru}}</ref> [[Саран ош|Сарансо]]. «Торама»-нь пурныцязо [[Йовлань Оло|Йовлань Оло (В. И. Ромашкин)]]<ref name="Эрзянь Мастор"/>. 
